2008-07-14    <brolley@redhat.com>

	* Makefile.am (bin_SCRIPTS): Add stap-client, stap-server, stap-serverd.
	* Makefile.in: Regenerated.
	* aclocal.m4: Regenerated.

2008-07-12  Frank Ch. Eigler  <fche@elastic.org>

	PR 6738.
	* buildrun.cxx (compile_pass): Add autoconf-uaccess.c.
	* translate.cxx (translate_pass): #include <linux/vermagic.h> for
	maximum version compatibility for UTS_RELEASE.

2008-07-12  Frank Ch. Eigler  <fche@elastic.org>

	By Andy Fitzsimon <afitzsim@redhat.com>:
	* smileytap.svg: New file.

2008-07-11  Frank Ch. Eigler  <fche@elastic.org>

	PR 6739
	* tapsets.cxx (global_alias_cache): Make this a per-module/cu cache,
	just like the function cache.
	(update_alias_cache): Removed.  Instead ...
	(declaration_resolve): Compute the lookup table for this module/cu,
	but only once.

2008-07-11  Frank Ch. Eigler  <fche@elastic.org>

	* translate.cxx (dump_unwindsyms): Start tolerating user-space programs,
	which may be unrelocatable.

2008-07-11  Frank Ch. Eigler  <fche@elastic.org>
	
	* hash.cxx (find_hash): Mix in -d MODULE names.

2008-07-10  Frank Ch. Eigler  <fche@elastic.org>

	* main.cxx (main): If "-k" (save temp directory) was supplied, 
	disable caching.

2008-07-10  Frank Ch. Eigler  <fche@elastic.org>

	PR 6703.
	* tapsets.cxx (mark_dwarf_redundancies): Tweak hashtable/iterator
	syntax for gcc 4.1 compatibility.

2008-07-10  Frank Ch. Eigler  <fche@elastic.org>

	PR 6736.
	* main.cxx (main,usage): Support new "-d MODULE" option to
	populate comp-unwindsyms module list.
	* stap.1.in: Document it.
	* tapsets.cxx (dwarf_query::add_probe_point): Add probed module
	to comp-unwindsyms set.
	(utrace_builder::build): Ditto for probed user-space program.
	* translate.cxx (emit_symbol_data): Emit _stp_module[] entry
	for each comp-unwindsyms member, including relocation bases
	and symbols, but not yet unwind data.
	* NEWS: Remove mention of temporarily disabled unwinder.
	* session.h: Corresponding changes.
